// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="ant-list ant-list-bordered ant-list-hovering"
>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-meta"
    >
      <div
        class="ant-list-item-meta-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-list-item-meta-content"
      >
        <h4
          class="ant-list-item-meta-title"
        >
          <a
            href="https://ant.design"
          >
            Ant design
          </a>
        </h4>
        <p
          class="ant-list-item-meta-description"
        >
          Ant Design, a design language for background applications, is refined by Ant UED Team
        </p>
      </div>
    </div>
    <div
      class="ant-list-item-content"
    >
      Content
    </div>
    <ul
      class="ant-list-item-action"
    >
      <li>
        <a>
          编辑
        </a>
        <em
          class="ant-list-item-action-split"
        />
      </li>
      <li>
        <a>
          更多
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-meta"
    >
      <div
        class="ant-list-item-meta-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-list-item-meta-content"
      >
        <h4
          class="ant-list-item-meta-title"
        >
          <a
            href="https://ant.design"
          >
            Ant design
          </a>
        </h4>
        <p
          class="ant-list-item-meta-description"
        >
          Ant Design, a design language for background applications, is refined by Ant UED Team
        </p>
      </div>
    </div>
    <div
      class="ant-list-item-content"
    >
      Content
    </div>
    <ul
      class="ant-list-item-action"
    >
      <li>
        <a>
          编辑
        </a>
        <em
          class="ant-list-item-action-split"
        />
      </li>
      <li>
        <a>
          更多
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-meta"
    >
      <div
        class="ant-list-item-meta-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-list-item-meta-content"
      >
        <h4
          class="ant-list-item-meta-title"
        >
          <a
            href="https://ant.design"
          >
            Ant design
          </a>
        </h4>
        <p
          class="ant-list-item-meta-description"
        >
          Ant Design, a design language for background applications, is refined by Ant UED Team
        </p>
      </div>
    </div>
    <div
      class="ant-list-item-content"
    >
      Content
    </div>
    <ul
      class="ant-list-item-action"
    >
      <li>
        <a>
          编辑
        </a>
        <em
          class="ant-list-item-action-split"
        />
      </li>
      <li>
        <a>
          更多
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-meta"
    >
      <div
        class="ant-list-item-meta-avatar"
      >
        <span
          class="ant-avatar ant-avatar-circle ant-avatar-image"
        >
          <img
            src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
          />
        </span>
      </div>
      <div
        class="ant-list-item-meta-content"
      >
        <h4
          class="ant-list-item-meta-title"
        >
          <a
            href="https://ant.design"
          >
            Ant design
          </a>
        </h4>
        <p
          class="ant-list-item-meta-description"
        >
          Ant Design, a design language for background applications, is refined by Ant UED Team
        </p>
      </div>
    </div>
    <div
      class="ant-list-item-content"
    >
      Content
    </div>
    <ul
      class="ant-list-item-action"
    >
      <li>
        <a>
          编辑
        </a>
        <em
          class="ant-list-item-action-split"
        />
      </li>
      <li>
        <a>
          更多
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-list-more"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        加载更多...
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="ant-list ant-list-bordered ant-list-grid ant-list-hovering"
>
  <div
    class="ant-row"
    style="margin-left:-8px;margin-right:-8px;"
  >
    <div
      class="ant-col-6"
    >
      <div
        class="ant-list-item"
        style="padding-left:8px;padding-right:8px;"
      >
        <div
          class="ant-list-item-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div>
              <div
                class="ant-card-head"
              >
                <h3
                  class="ant-card-head-title"
                >
                  Card title
                </h3>
              </div>
              <div
                class="ant-card-body"
              >
                <div>
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-6"
    >
      <div
        class="ant-list-item"
        style="padding-left:8px;padding-right:8px;"
      >
        <div
          class="ant-list-item-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div>
              <div
                class="ant-card-head"
              >
                <h3
                  class="ant-card-head-title"
                >
                  Card title
                </h3>
              </div>
              <div
                class="ant-card-body"
              >
                <div>
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-6"
    >
      <div
        class="ant-list-item"
        style="padding-left:8px;padding-right:8px;"
      >
        <div
          class="ant-list-item-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div>
              <div
                class="ant-card-head"
              >
                <h3
                  class="ant-card-head-title"
                >
                  Card title
                </h3>
              </div>
              <div
                class="ant-card-body"
              >
                <div>
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-6"
    >
      <div
        class="ant-list-item"
        style="padding-left:8px;padding-right:8px;"
      >
        <div
          class="ant-list-item-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div>
              <div
                class="ant-card-head"
              >
                <h3
                  class="ant-card-head-title"
                >
                  Card title
                </h3>
              </div>
              <div
                class="ant-card-body"
              >
                <div>
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-6"
    >
      <div
        class="ant-list-item"
        style="padding-left:8px;padding-right:8px;"
      >
        <div
          class="ant-list-item-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div>
              <div
                class="ant-card-head"
              >
                <h3
                  class="ant-card-head-title"
                >
                  Card title
                </h3>
              </div>
              <div
                class="ant-card-body"
              >
                <div>
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col-6"
    >
      <div
        class="ant-list-item"
        style="padding-left:8px;padding-right:8px;"
      >
        <div
          class="ant-list-item-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div>
              <div
                class="ant-card-head"
              >
                <h3
                  class="ant-card-head-title"
                >
                  Card title
                </h3>
              </div>
              <div
                class="ant-card-body"
              >
                <div>
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="ant-list ant-list-vertical ant-list-bordered"
>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 0
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 1
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 2
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 3
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 4
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 5
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 6
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 7
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 8
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-item"
  >
    <div
      class="ant-list-item-extra-wrap"
    >
      <div
        class="ant-list-item-main"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="http://ant.design"
              >
                ant design part 9
              </a>
            </h4>
            <p
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team.
            </p>
          </div>
        </div>
        <div
          class="ant-list-item-content"
        >
          We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
        </div>
        <ul
          class="ant-list-item-action"
        >
          <li>
            <span>
              <i
                class="anticon anticon-star-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-like-o"
                style="margin-right:8px;"
              />
              156
            </span>
            <em
              class="ant-list-item-action-split"
            />
          </li>
          <li>
            <span>
              <i
                class="anticon anticon-message"
                style="margin-right:8px;"
              />
              2
            </span>
          </li>
        </ul>
      </div>
      <div
        class="ant-list-item-extra"
      >
        <img
          alt="logo"
          src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
          width="272"
        />
      </div>
    </div>
  </div>
  <div
    class="ant-list-pagination"
  >
    <ul
      class="ant-pagination "
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="ant-pagination-disabled ant-pagination-prev"
        tabindex="0"
        title="上一页"
      >
        <a />
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        aria-disabled="true"
        class="ant-pagination-disabled ant-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <a />
      </li>
    </ul>
  </div>
</div>
`;
